--- a/BallScrewVCP4.ui
+++ b/BallScrewVCP4.ui
@@ -46,42 +46,31 @@ background-image: url(./resources/stripes.png);
 }</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="5" column="0">
-        <widget class="PushButton" name="btnTestActive4">
+       <item row="2" column="0">
+        <widget class="PushButton" name="btnTestActive1">
          <property name="styleSheet">
           <string notr="true">background-color: rgb(252, 233, 79);</string>
          </property>
          <property name="text">
-          <string>active_4</string>
+          <string>active_1</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
-        <widget class="PushButton" name="btnTestActive3">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
          <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
+          <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(239, 41, 41);
+font: bold</string>
          </property>
          <property name="text">
-          <string>active_3</string>
+          <string>Для тестов</string>
          </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="PushButton" name="btnTestActive2">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>active_2</string>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
+         <property name="margin">
+          <number>5</number>
          </property>
         </widget>
        </item>
@@ -111,19 +100,6 @@ background-image: url(./resources/stripes.png);
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="PushButton" name="btnTestActive1">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>active_1</string>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="7" column="0">
         <widget class="PushButton" name="btnTestAppendBuffer34">
          <property name="styleSheet">
@@ -134,7 +110,30 @@ background-image: url(./resources/stripes.png);
          </property>
         </widget>
        </item>
-       <item row="9" column="0">
+       <item row="8" column="0">
+        <widget class="PushButton" name="btnTestAppendFile34">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>append_file</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="PushButton" name="btnTestActive2">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_2</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="0">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -147,28 +146,36 @@ background-image: url(./resources/stripes.png);
          </property>
         </spacer>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="styleSheet">
-          <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(239, 41, 41);
-font: bold</string>
-         </property>
-         <property name="text">
-          <string>Для тестов</string>
-         </property>
-         <property name="margin">
-          <number>5</number>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="0">
-        <widget class="PushButton" name="btnTestAppendFile34">
+       <item row="5" column="0">
+        <widget class="PushButton" name="btnTestActive4">
          <property name="styleSheet">
           <string notr="true">background-color: rgb(252, 233, 79);</string>
          </property>
          <property name="text">
-          <string>append_file</string>
+          <string>active_4</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="PushButton" name="btnTestActive3">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_3</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>testIniSave</string>
          </property>
         </widget>
        </item>
@@ -1158,6 +1165,22 @@ qproperty-diameter: 70;</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>pushButton</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>update_ini()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>73</x>
+     <y>510</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>0</x>
+     <y>499</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onBtnTempShow34()</slot>
@@ -1169,5 +1192,6 @@ qproperty-diameter: 70;</string>
   <slot>onBtnSaveGCode34()</slot>
   <slot>pnBtnShowResult34()</slot>
   <slot>onBtnClearPlot34()</slot>
+  <slot>update_ini()</slot>
  </slots>
 </ui>
