--- a/BallScrewVCP4.ui
+++ b/BallScrewVCP4.ui
@@ -217,24 +217,6 @@ font: 15pt bold;</string>
         </item>
         <item row="1" column="0" rowspan="4">
          <layout class="QGridLayout" name="gridLayout_14">
-          <item row="3" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_16">
-            <item>
-             <widget class="CheckBox" name="chkLogPermit34">
-              <property name="text">
-               <string>Записывать в файл</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="btnShowResult34">
-              <property name="text">
-               <string>Просмотр результатов</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
           <item row="5" column="0" alignment="Qt::AlignHCenter">
            <widget class="QPushButton" name="btnSaveGCode34">
             <property name="text">
@@ -303,89 +285,6 @@ font: 15pt bold;</string>
             </item>
            </layout>
           </item>
-          <item row="7" column="0">
-           <layout class="QGridLayout" name="gridLayout_18">
-            <item row="4" column="1">
-             <widget class="ActionButton" name="btnProgram_Stop34">
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(239, 41, 41);</string>
-              </property>
-              <property name="text">
-               <string>Стоп</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>resources/stop.png</normaloff>resources/stop.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>40</width>
-                <height>40</height>
-               </size>
-              </property>
-              <property name="abort_action" stdset="0">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="ActionButton" name="btnProgram_Run34">
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(138, 226, 52);</string>
-              </property>
-              <property name="text">
-               <string>Старт</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>40</width>
-                <height>40</height>
-               </size>
-              </property>
-              <property name="run_action" stdset="0">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="1">
-             <widget class="ActionButton" name="btnProgram_Pause34">
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(114, 159, 207);</string>
-              </property>
-              <property name="text">
-               <string>Пауза</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>resources/pause.png</normaloff>resources/pause.png</iconset>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>40</width>
-                <height>40</height>
-               </size>
-              </property>
-              <property name="pause_action" stdset="0">
-               <bool>true</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QPushButton" name="btnLoadGCode34">
-              <property name="text">
-               <string>Загрузить УП</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0" rowspan="4">
-             <widget class="GcodeEditor" name="gcode_editor34"/>
-            </item>
-           </layout>
-          </item>
           <item row="4" column="0">
            <layout class="QGridLayout" name="gridLayout_24">
             <item row="4" column="1">
@@ -401,7 +300,8 @@ font: 15pt bold;</string>
             <item row="4" column="0">
              <widget class="QLabel" name="label_79">
               <property name="text">
-               <string>Нагрузка в конечном положении, кгс</string>
+               <string>Нагрузка в конечном
+положении, кгс</string>
               </property>
              </widget>
             </item>
@@ -435,7 +335,8 @@ font: 15pt bold;</string>
             <item row="3" column="0">
              <widget class="QLabel" name="label_78">
               <property name="text">
-               <string>Нагрузка в начальном положении, кгс</string>
+               <string>Нагрузка в начальном
+положении, кгс</string>
               </property>
              </widget>
             </item>
@@ -496,31 +397,35 @@ font: 15pt bold;</string>
              <string>Нагружение</string>
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
-             <item row="0" column="2">
-              <widget class="QLabel" name="label_80">
-               <property name="text">
-                <string>Нагрузка расчётная, кгс</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0" colspan="2">
-              <widget class="LED" name="ledAt_Load34"/>
-             </item>
-             <item row="0" column="3">
+             <item row="0" column="5">
               <widget class="QLabel" name="lblLoad34">
                <property name="text">
                 <string>---</string>
                </property>
               </widget>
              </item>
-             <item row="0" column="0">
-              <widget class="QCheckBox" name="chkDsp_ModeOn34">
+             <item row="1" column="4">
+              <widget class="QLabel" name="label_81">
+               <property name="text">
+                <string>Нагрузка фактическая, кгс</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="4">
+              <widget class="QLabel" name="label_80">
+               <property name="text">
+                <string>Нагрузка расчётная, кгс</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="CheckBox" name="chkDsp_ModeOn34">
                <property name="text">
                 <string>On</string>
                </property>
               </widget>
              </item>
-             <item row="1" column="3">
+             <item row="1" column="5">
               <widget class="QLabel" name="lblLoad_Actual34">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -533,22 +438,36 @@ font: 15pt bold;</string>
                </property>
               </widget>
              </item>
-             <item row="1" column="2">
-              <widget class="QLabel" name="label_81">
-               <property name="text">
-                <string>Нагрузка фактическая, кгс</string>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QCheckBox" name="chkDsp_ModeOff34">
+             <item row="0" column="2">
+              <widget class="CheckBox" name="chkDsp_ModeOff34">
                <property name="text">
                 <string>Off</string>
                </property>
               </widget>
              </item>
+             <item row="1" column="1" colspan="2">
+              <widget class="LED" name="ledAt_Load34"/>
+             </item>
             </layout>
            </widget>
+          </item>
+          <item row="3" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout_16">
+            <item>
+             <widget class="CheckBox" name="chkLogPermit34">
+              <property name="text">
+               <string>Записывать в файл</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnShowResult34">
+              <property name="text">
+               <string>Просмотр результатов</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item row="1" column="0">
            <widget class="QGroupBox" name="groupBox">
@@ -624,6 +543,19 @@ font: 15pt bold;</string>
              </item>
             </layout>
            </widget>
+          </item>
+          <item row="6" column="0">
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </item>
@@ -810,7 +742,7 @@ qproperty-diameter: 70;</string>
            <enum>QFrame::NoFrame</enum>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="page_3">
            <property name="geometry">
@@ -818,7 +750,7 @@ qproperty-diameter: 70;</string>
              <x>0</x>
              <y>0</y>
              <width>512</width>
-             <height>599</height>
+             <height>566</height>
             </rect>
            </property>
            <attribute name="label">
@@ -996,7 +928,7 @@ qproperty-diameter: 70;</string>
              <x>0</x>
              <y>0</y>
              <width>512</width>
-             <height>599</height>
+             <height>566</height>
             </rect>
            </property>
            <attribute name="label">
@@ -1048,6 +980,105 @@ qproperty-diameter: 70;</string>
                <string>Очистить</string>
               </property>
              </widget>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="page">
+           <attribute name="label">
+            <string>Программа испытаний</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_7">
+            <item row="0" column="0">
+             <widget class="QPushButton" name="btnLoadGCode34">
+              <property name="text">
+               <string>Загрузить УП</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="ActionButton" name="btnProgram_Pause34">
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(114, 159, 207);</string>
+              </property>
+              <property name="text">
+               <string>Пауза</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/pause.png</normaloff>resources/pause.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="pause_action" stdset="0">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="3">
+             <widget class="ActionButton" name="btnProgram_Stop34">
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(239, 41, 41);</string>
+              </property>
+              <property name="text">
+               <string>Стоп</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/stop.png</normaloff>resources/stop.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="abort_action" stdset="0">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="ActionButton" name="btnProgram_Run34">
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(138, 226, 52);</string>
+              </property>
+              <property name="text">
+               <string>Старт</string>
+              </property>
+              <property name="icon">
+               <iconset>
+                <normaloff>resources/play.png</normaloff>resources/play.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>40</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="run_action" stdset="0">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="4">
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item row="1" column="0" colspan="5">
+             <widget class="GcodeEditor" name="gcode_editor34"/>
             </item>
            </layout>
           </widget>
