--- a/BallScrewVCP4.ui
+++ b/BallScrewVCP4.ui
@@ -37,7 +37,7 @@ qproperty-diameter: 20;
 </string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="1,9">
     <item row="0" column="0">
      <widget class="QWidget" name="widget" native="true">
       <property name="styleSheet">
@@ -46,16 +46,36 @@ background-image: url(./resources/stripes.png);
 }</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="5" column="0">
-        <widget class="PushButton" name="btnTestActive4">
+       <item row="12" column="0">
+        <widget class="Slider" name="sldTestPos">
+         <property name="maximum">
+          <number>200</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="PushButton" name="btnTestActive2">
          <property name="styleSheet">
           <string notr="true">background-color: rgb(252, 233, 79);</string>
          </property>
          <property name="text">
-          <string>active_4</string>
+          <string>active_2</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="PushButton" name="btnTestAppendTitle34">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>append_title</string>
          </property>
         </widget>
        </item>
@@ -74,6 +94,13 @@ font: bold</string>
          </property>
         </widget>
        </item>
+       <item row="10" column="0">
+        <widget class="QPushButton" name="btnTestPlot">
+         <property name="text">
+          <string>testPlot</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="0">
         <widget class="PushButton" name="btnTestActive0">
          <property name="styleSheet">
@@ -87,6 +114,62 @@ font: bold</string>
          </property>
          <property name="checked_state_text_option" stdset="0">
           <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="0">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="9" column="0">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>testIniSave</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="PushButton" name="btnTestActive3">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_3</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="PushButton" name="btnTestActive1">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_1</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="14" column="0">
+        <widget class="Slider" name="sldTestLoad">
+         <property name="maximum">
+          <number>10</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
@@ -110,36 +193,13 @@ font: bold</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
-        <widget class="PushButton" name="btnTestAppendTitle34">
+       <item row="5" column="0">
+        <widget class="PushButton" name="btnTestActive4">
          <property name="styleSheet">
           <string notr="true">background-color: rgb(252, 233, 79);</string>
          </property>
          <property name="text">
-          <string>append_title</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="PushButton" name="btnTestActive3">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>active_3</string>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="PushButton" name="btnTestActive2">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>active_2</string>
+          <string>active_4</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -147,42 +207,16 @@ font: bold</string>
         </widget>
        </item>
        <item row="11" column="0">
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="9" column="0">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QLabel" name="label_3">
          <property name="text">
-          <string>testIniSave</string>
+          <string>Pos</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="PushButton" name="btnTestActive1">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
+       <item row="13" column="0">
+        <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>active_1</string>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="0">
-        <widget class="QPushButton" name="btnTestPlot">
-         <property name="text">
-          <string>testPlot</string>
+          <string>Load</string>
          </property>
         </widget>
        </item>
@@ -195,7 +229,7 @@ font: bold</string>
        <number>0</number>
       </property>
       <widget class="QWidget" name="page34">
-       <layout class="QGridLayout" name="gridLayout_13">
+       <layout class="QGridLayout" name="gridLayout_13" columnstretch="1,3">
         <item row="1" column="1">
          <layout class="QGridLayout" name="gridLayout_12">
           <item row="2" column="1" rowspan="2">
@@ -347,7 +381,7 @@ font: bold</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>503</width>
+             <width>604</width>
              <height>619</height>
             </rect>
            </property>
@@ -525,7 +559,7 @@ font: bold</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>503</width>
+             <width>604</width>
              <height>619</height>
             </rect>
            </property>
@@ -548,6 +582,12 @@ font: bold</string>
             </item>
             <item row="0" column="0" alignment="Qt::AlignHCenter">
              <widget class="QPushButton" name="btnShowForse34">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="text">
                <string>Линейное усилие</string>
               </property>
@@ -586,7 +626,7 @@ font: bold</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>503</width>
+             <width>604</width>
              <height>619</height>
             </rect>
            </property>
