--- a/BallScrewVCP4.ui
+++ b/BallScrewVCP4.ui
@@ -56,19 +56,6 @@ background-image: url(./resources/stripes.png);
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="PushButton" name="btnTestActive2">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>active_2</string>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
        <item row="6" column="0">
         <widget class="PushButton" name="btnTestAppendTitle34">
          <property name="styleSheet">
@@ -79,25 +66,16 @@ background-image: url(./resources/stripes.png);
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label">
+       <item row="3" column="0">
+        <widget class="PushButton" name="btnTestActive2">
          <property name="styleSheet">
-          <string notr="true">color: rgb(255, 255, 255);
-background-color: rgb(239, 41, 41);
-font: bold</string>
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
          </property>
          <property name="text">
-          <string>Для тестов</string>
+          <string>active_2</string>
          </property>
-         <property name="margin">
-          <number>5</number>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="0">
-        <widget class="QPushButton" name="btnTestPlot">
-         <property name="text">
-          <string>testPlot</string>
+         <property name="checkable">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -117,6 +95,16 @@ font: bold</string>
          </property>
         </widget>
        </item>
+       <item row="8" column="0">
+        <widget class="PushButton" name="btnTestAppendFile34">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>append_file</string>
+         </property>
+        </widget>
+       </item>
        <item row="15" column="0">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
@@ -129,6 +117,41 @@ font: bold</string>
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="10" column="0">
+        <widget class="QPushButton" name="btnTestPlot">
+         <property name="text">
+          <string>testPlot</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="PushButton" name="btnTestActive4">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>active_4</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="styleSheet">
+          <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(239, 41, 41);
+font: bold</string>
+         </property>
+         <property name="text">
+          <string>Для тестов</string>
+         </property>
+         <property name="margin">
+          <number>5</number>
+         </property>
+        </widget>
        </item>
        <item row="9" column="0">
         <widget class="QPushButton" name="pushButton">
@@ -150,6 +173,23 @@ font: bold</string>
          </property>
         </widget>
        </item>
+       <item row="7" column="0">
+        <widget class="PushButton" name="btnTestAppendBuffer34">
+         <property name="styleSheet">
+          <string notr="true">background-color: rgb(252, 233, 79);</string>
+         </property>
+         <property name="text">
+          <string>append_buffer</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="0">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Pos</string>
+         </property>
+        </widget>
+       </item>
        <item row="2" column="0">
         <widget class="PushButton" name="btnTestActive1">
          <property name="styleSheet">
@@ -163,60 +203,23 @@ font: bold</string>
          </property>
         </widget>
        </item>
-       <item row="14" column="0">
-        <widget class="Slider" name="sldTestLoad">
-         <property name="maximum">
-          <number>10</number>
-         </property>
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="0">
-        <widget class="PushButton" name="btnTestAppendBuffer34">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>append_buffer</string>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="0">
-        <widget class="PushButton" name="btnTestAppendFile34">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>append_file</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <widget class="PushButton" name="btnTestActive4">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(252, 233, 79);</string>
-         </property>
-         <property name="text">
-          <string>active_4</string>
-         </property>
-         <property name="checkable">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="11" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Pos</string>
-         </property>
-        </widget>
-       </item>
        <item row="13" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
           <string>Load</string>
+         </property>
+        </widget>
+       </item>
+       <item row="14" column="0">
+        <widget class="Slider" name="sldTestLoad">
+         <property name="minimum">
+          <number>-1000</number>
+         </property>
+         <property name="maximum">
+          <number>1000</number>
+         </property>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
@@ -581,7 +584,7 @@ font: bold</string>
              </widget>
             </item>
             <item row="0" column="0" alignment="Qt::AlignHCenter">
-             <widget class="QPushButton" name="btnShowForse34">
+             <widget class="QPushButton" name="btnShowForce34">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
                 <horstretch>0</horstretch>
@@ -1262,8 +1265,8 @@ qproperty-diameter: 40;</string>
    <slot>onBtnLoadGCode34()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>630</x>
-     <y>714</y>
+     <x>695</x>
+     <y>310</y>
     </hint>
     <hint type="destinationlabel">
      <x>13</x>
@@ -1278,44 +1281,12 @@ qproperty-diameter: 40;</string>
    <slot>onBtnSaveGCode34()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>448</x>
-     <y>659</y>
+     <x>414</x>
+     <y>626</y>
     </hint>
     <hint type="destinationlabel">
      <x>5</x>
      <y>584</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btnClearPlot34</sender>
-   <signal>clicked()</signal>
-   <receiver>BallScrewControlMainWindow</receiver>
-   <slot>onBtnClearPlot34()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>961</x>
-     <y>863</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>717</x>
-     <y>886</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>btnShowResult34</sender>
-   <signal>clicked()</signal>
-   <receiver>BallScrewControlMainWindow</receiver>
-   <slot>pnBtnShowResult34()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>630</x>
-     <y>419</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>5</x>
-     <y>344</y>
     </hint>
    </hints>
   </connection>
@@ -1335,6 +1306,22 @@ qproperty-diameter: 40;</string>
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>btnShowResult34</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnShowResult34()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>437</x>
+     <y>357</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-2</x>
+     <y>335</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>onBtnTempShow34()</slot>
@@ -1344,7 +1331,7 @@ qproperty-diameter: 40;</string>
   <slot>onBtnLoadGCode34()</slot>
   <slot>onBtnTestActive0(bool)</slot>
   <slot>onBtnSaveGCode34()</slot>
-  <slot>pnBtnShowResult34()</slot>
+  <slot>onBtnShowResult34()</slot>
   <slot>onBtnClearPlot34()</slot>
   <slot>update_ini()</slot>
  </slots>
