Added MODE_MANUAL switch on jog buttons on form 3.3, and round seconds in log on form 3.2

--- a/BallScrewVCP1.ui
+++ b/BallScrewVCP1.ui
@@ -116,7 +116,7 @@ qproperty-diameter: 20;
          </layout>
         </item>
         <item row="0" column="0" rowspan="7">
-         <widget class="QWidget" name="widget" native="true">
+         <widget class="QWidget" name="wgtTestPanel" native="true">
           <property name="styleSheet">
            <string notr="true">#widget {
 background-image: url(./resources/stripes.png);
